--- a/.github/workflows/scan-trufflehog.yaml
+++ b/.github/workflows/scan-trufflehog.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: TruffleHog OSS 
         id: trufflehog 
-        uses: trufflesecurity/trufflehog@add-actions-cli-switch 
+        uses: trufflesecurity/trufflehog@main
         continue-on-error: true 
         with: 
           path: ./ 
